data/derived/sp14/progs/unify/prog1279.ml.out
Characters 68-109:
  else sum = digitalRoot(sumList(digitsOfInt n));;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
